--- a/source/sass/blocks/types.scss
+++ b/source/sass/blocks/types.scss
@@ -14,7 +14,7 @@
 
 .types ul {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(0, max-content));
+  grid-template-columns: repeat(auto-fit, minmax(250px, max-content));
   justify-content: center;
   grid-gap: 50px;
   margin: 0 auto;
